<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CompassActivity">

    <ImageView
        android:id="@+id/status_indicator"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/compass_screen_layout"
        app:layout_constraintCircleAngle="150"
        app:layout_constraintCircleRadius="175dp"
        app:layout_constraintEnd_toStartOf="@+id/last_connected"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/address_node" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/compass_screen_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:rotation="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/four_ring_compass" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/three_ring_compass" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/two_ring_compass" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/one_ring_compass" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/compass_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<!--            <TextView-->
<!--                android:id="@+id/textView1"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:ellipsize="end"-->
<!--                android:text="This is a very long text that needs to be truncated"-->
<!--                app:layout_constrainedHeight="true"-->
<!--                app:layout_constrainedWidth="true"-->
<!--                app:layout_constraintHorizontal_weight="1"-->

<!--                tools:layout_editor_absoluteX="72dp"-->
<!--                tools:layout_editor_absoluteY="0dp" />-->

<!--            <TextView-->
<!--                android:id="@+id/textView2"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Another text view"-->
<!--                android:ellipsize="end"-->

<!--                app:layout_constrainedHeight="true"-->
<!--                app:layout_constrainedWidth="true"-->
<!--                tools:layout_editor_absoluteX="0dp"-->
<!--                tools:layout_editor_absoluteY="0dp"-->
<!--                app:layout_constraintHorizontal_weight="1"-->
<!--                />-->
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/zoom_in_button"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="60dp"
        android:text="zoom in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zoom_out_button"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="10dp"
        android:text="zoom out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/to_friends_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/add_another_friend"
        android:onClick="toFriendsList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/last_connected"
        android:layout_width="53dp"
        android:layout_height="16dp"
        android:layout_marginEnd="220dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/compass_screen_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

</androidx.constraintlayout.widget.ConstraintLayout>