<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FriendListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/my_name_from_friendlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:hint="MY NAME"
            android:textSize="20dp"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/my_public_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="1123342"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/my_name_from_friendlist"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friend_items"
        android:layout_width="414dp"
        android:layout_height="584dp"

        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:id="@+id/add_friend_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginEnd="52dp"
        android:layout_marginBottom="72dp"
        android:text="ADD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/compass_view_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="16dp"
        android:text="SHOW"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_friend_public_code"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="72dp"
        android:hint="Enter friend's UID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>