...
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/friend_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:gravity="center"
            android:text="❌"
...
